#10 fix systemd unit file; added ansible comment in templates

--- a/templates/redis_exporter.service.j2
+++ b/templates/redis_exporter.service.j2
@@ -1,3 +1,4 @@
+{{ ansible_managed | comment }}
 [Unit]
 Description=prometheus redis exporter
 Requires=network-online.target
@@ -8,10 +9,8 @@ PrivateTmp=yes
 User={{ redis_exporter_user }}
 Group={{ redis_exporter_group }}
 RuntimeDirectory=redis_exporter
-ExecStart=/bin/sh -c "{{ redis_exporter_bin_path }}/redis_exporter {% for option in redis_exporter_options %}{% if option %}-{{ option }} {% endif %}{% endfor %}> {{ redis_exporter_log_path }}/{{ redis_exporter_log_file }} 2>&1"
-ExecStartPost=/bin/sh -c "echo $MAINPID > /run/redis_exporter/redis_exporter.pid"
+ExecStart={{ redis_exporter_bin_path }}/redis_exporter {% for option in redis_exporter_options %}{% if option %}-{{ option }} {% endif %}{% endfor %}> {{ redis_exporter_log_path }}/{{ redis_exporter_log_file }} 2>&1
 ExecReload=/bin/kill -HUP $MAINPID
-PIDFile=/run/redis_exporter/redis_exporter.pid
 KillSignal=SIGTERM
 
 [Install]
