--- a/templates/logrotate.j2
+++ b/templates/logrotate.j2
@@ -10,6 +10,6 @@
   delaycompress
   create 664 {{ redis_exporter_user }} {{ redis_exporter_group }}
   postrotate
-        [ ! -f /run/redis_exporter.pid ] || systemctl restart redis_exporter.service
+        systemctl restart redis_exporter.service
   endscript
 }
