--- a/templates/redis_exporter.service.j2
+++ b/templates/redis_exporter.service.j2
@@ -11,8 +11,8 @@ Group={{ redis_exporter_group }}
 RuntimeDirectory=redis_exporter
 ExecStart={{ redis_exporter_bin_path }}/redis_exporter {% for option in redis_exporter_options %}{% if option %}-{{ option }} {% endif %}{% endfor %}
 
-StandardOutput=append:{{ redis_exporter_log_path }}/{{ redis_exporter_log_file }}
-StandardError=append:{{ redis_exporter_log_path }}/{{ redis_exporter_log_file }}
+StandardOutput={{ redis_exporter_log_output }}
+StandardError={{ redis_exporter_log_output }}
 ExecReload=/bin/kill -HUP $MAINPID
 KillSignal=SIGTERM
 Restart=always
